--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Example of a present time block. The "present" class adds a red background color. -->
         <div id="hour-10" class="row time-block present">
           <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <textarea id="text-10" class="col-8 col-md-10 description" rows="3"> </textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
@@ -62,7 +62,7 @@
       <!-- Example of a future time block. The "future" class adds a green background color. -->
         <div id="hour-11" class="row time-block future">
           <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <textarea id="text-11" class="col-8 col-md-10 description" rows="3"> </textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
@@ -71,7 +71,7 @@
 
         <div id="hour-12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-12" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -80,7 +80,7 @@
 
         <div id="hour-13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-13" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -89,7 +89,7 @@
 
         <div id="hour-14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-14" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
             </button>
@@ -98,7 +98,7 @@
 
         <div id="hour-15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea id="text-15" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
           </button>
@@ -107,7 +107,7 @@
 
           <div id="hour-16" class="row time-block future">
             <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
-            <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+            <textarea id="text-16" class="col-8 col-md-10 description" rows="3"> </textarea>
             <button class="btn saveBtn col-2 col-md-1" aria-label="save">
             <i class="fas fa-save" aria-hidden="true"></i>
               </button>
@@ -116,7 +116,7 @@
 
                 <div id="hour-17" class="row time-block future">
                 <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
-                <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+                <textarea id="text-17" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
                 <i class="fas fa-save" aria-hidden="true"></i>
                 </button>
