--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-        <div id="hour-11" class="row time-block future">
+        <div id="11" class="row time-block future">
           <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
           <textarea id="text-11" class="col-8 col-md-10 description" rows="3"> </textarea>
           <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -69,7 +69,7 @@
         </div>
     
 
-        <div id="hour-12" class="row time-block future">
+        <div id="12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea id="text-12" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -78,7 +78,7 @@
         </div>
   
 
-        <div id="hour-13" class="row time-block future">
+        <div id="13" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea id="text-13" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -87,7 +87,7 @@
         </div>
   
 
-        <div id="hour-14" class="row time-block future">
+        <div id="14" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea id="text-14" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -96,7 +96,7 @@
             </div>
 
 
-        <div id="hour-15" class="row time-block future">
+        <div id="15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea id="text-15" class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -105,7 +105,7 @@
             </div>
 
 
-          <div id="hour-16" class="row time-block future">
+          <div id="16" class="row time-block future">
             <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
             <textarea id="text-16" class="col-8 col-md-10 description" rows="3"> </textarea>
             <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -114,7 +114,7 @@
               </div>
 
 
-                <div id="hour-17" class="row time-block future">
+                <div id="17" class="row time-block future">
                 <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
                 <textarea id="text-17" class="col-8 col-md-10 description" rows="3"> </textarea>
                 <button class="btn saveBtn col-2 col-md-1" aria-label="save">
